Fixed large image on tablet

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -437,14 +437,14 @@
             min-width: unset;
             max-width: 100%;
 
-            max-height: 19.75rem;
+            // max-height: 19.75rem;
 
-            padding-bottom: 4.8125rem;
+            // padding-bottom: 4.8125rem;
 
 
             img {
                 object-fit: contain;
-                align-self: unset;
+                // align-self: unset;
             }
         }
 
@@ -569,9 +569,14 @@
             padding-left: 3.625rem;
             padding-bottom: 1.5rem;
 
-            .the-image {
-                height: 100%;
-                width: 100%;
+
+            .overlay {
+                .the-image {
+                    height: 100%;
+                    width: 100%;
+
+                    margin-top: -5.625rem;
+                }
             }
         }
         
